In 'Vertex Paint Mode' the tools 'Hue Saturation Value' and 'Bright Contrast' don't work with face/vertex mask (paint mask) #69835

Closed
opened 2019-09-13 11:19:51 +02:00 by Lopo Isaac · 6 comments

System Information
Operating system: Linux-5.0.0-27-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 670/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.129

Blender Version
Broken: version: 2.81 (sub 10), branch: master, commit date: 2019-09-12 09:34, hash: 492a7998d5
Worked: (optional)

Short description of error
When you change the slider of these tools Blender disables the face/vertex mask (i.e., the selected faces/vertices in edit mode that you want to use as a mask in Vertex Paint Mode)

Exact steps for others to reproduce the error

  1. New File
  2. Select default cube > Edit mode > select any face
  3. Enter Vertex Paint > check the icon for 'Paint Mask' (for faces or vertices) so you can only paint in the selected geometry
  4. Use 'Hue Saturation Value' and 'Bright Contrast' and start tweaking the values with the slider (at the pop up menu that appears down, left)
  5. When the slider is pressed (not before) Blender disables the mask and applies the effect in all the geometry (and not in that one masked area).
**System Information** Operating system: Linux-5.0.0-27-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 670/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.129 **Blender Version** Broken: version: 2.81 (sub 10), branch: master, commit date: 2019-09-12 09:34, hash: `492a7998d5` Worked: (optional) **Short description of error** When you change the slider of these tools Blender disables the face/vertex mask (i.e., the selected faces/vertices in edit mode that you want to use as a mask in Vertex Paint Mode) **Exact steps for others to reproduce the error** 1) New File 2) Select default cube > Edit mode > select any face 3) Enter Vertex Paint > check the icon for 'Paint Mask' (for faces or vertices) so you can only paint in the selected geometry 4) Use 'Hue Saturation Value' and 'Bright Contrast' and start tweaking the values with the slider (at the pop up menu that appears down, left) 5) When the slider is pressed (not before) Blender disables the mask and applies the effect in all the geometry (and not in that one masked area).
Author

Added subscriber: @lowpolysaac

Added subscriber: @lowpolysaac
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can repro that vertex mask selection is not respected for those operations, added a fix for this, see D5783: Fix vertex paint: color transform operators not respecting vertex paint mask selection...

The other issue [the disabeling of the mask] I am having trouble to reproduce...

Can repro that vertex mask selection is not respected for those operations, added a fix for this, see [D5783: Fix vertex paint: color transform operators not respecting vertex paint mask selection](https://archive.blender.org/developer/D5783)... The other issue [the disabeling of the mask] I am having trouble to reproduce...
Author

It's weird because sometimes the mask is disabled, sometimes not. Could it be my PC? I will check it again later (disabling all addons and with a fresh install). Should this be closed and should I report the possible 'disable mask' bug later as a different issue? (not sure how this works, this is my second bug report). Thank you!

It's weird because sometimes the mask is disabled, sometimes not. Could it be my PC? I will check it again later (disabling all addons and with a fresh install). Should this be closed and should I report the possible 'disable mask' bug later as a different issue? (not sure how this works, this is my second bug report). Thank you!
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Philipp Oeser self-assigned this 2019-09-13 15:39:00 +02:00
Member

In #69835#775355, @lowpolysaac wrote:
It's weird because sometimes the mask is disabled, sometimes not. Could it be my PC? I will check it again later (disabling all addons and with a fresh install). Should this be closed and should I report the possible 'disable mask' bug later as a different issue? (not sure how this works, this is my second bug report). Thank you!

Yes, making a seperate report for this is probably better, thx. Will mark this one as resolved then...

> In #69835#775355, @lowpolysaac wrote: > It's weird because sometimes the mask is disabled, sometimes not. Could it be my PC? I will check it again later (disabling all addons and with a fresh install). Should this be closed and should I report the possible 'disable mask' bug later as a different issue? (not sure how this works, this is my second bug report). Thank you! Yes, making a seperate report for this is probably better, thx. Will mark this one as resolved then...
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69835
No description provided.